test-suite/tests/roundtrip/invalid/semantic/typecheck/matrix_in_set_expr/input.essence
letting s be {1, 2, 3}
letting s2 be [4, 5, 2]
such that s supset s2